testdata/baselines/reference/submodule/conformance/typeFromPropertyAssignment11.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
module.js(2,7): error TS2339: Property 'prototype' does not exist on type '() => void'.
module.js(7,7): error TS2339: Property 'prototype' does not exist on type '() => void'.
module.js(9,7): error TS2339: Property 'prototype' does not exist on type '() => void'.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== module.js (3 errors) ====
    var Inner = function() {}
    Inner.prototype = {
          ~~~~~~~~~
!!! error TS2339: Property 'prototype' does not exist on type '() => void'.
        m() { },
        i: 1
    }
    // incremental assignments still work
    Inner.prototype.j = 2
          ~~~~~~~~~
!!! error TS2339: Property 'prototype' does not exist on type '() => void'.
    /** @type {string} */
    Inner.prototype.k;
          ~~~~~~~~~
!!! error TS2339: Property 'prototype' does not exist on type '() => void'.
    var inner = new Inner()
    inner.m()
    inner.i
    inner.j
    inner.k
    